# algorithm

./: .gitignore
Code/c++/Backjun/TotalCode/: CMakeLists.txt  main.cpp  main.h
Code/c++/Backjun/TotalCode/0_Etc/10799/: Code_10799.cpp  Code_10799.h
Code/c++/Backjun/TotalCode/0_Etc/10828/: Code_10828.cpp
Code/c++/Backjun/TotalCode/1026/: Code_1026.cpp  Code_1026.h
Code/c++/Backjun/TotalCode/1065/: Code_1065.cpp  Code_1065.h
Code/c++/Backjun/TotalCode/10799/: Code_10799.cpp  Code_10799.h
Code/c++/Backjun/TotalCode/10815/: Code_10815.cpp  Code_10815.h
Code/c++/Backjun/TotalCode/10828/: Code_10828.cpp  Code_10828.h
Code/c++/Backjun/TotalCode/1427/: Code_1427.cpp  Code_1427.h
Code/c++/Backjun/TotalCode/1920/: Code_1920.cpp  Code_1920.h
Code/c++/Backjun/TotalCode/1_Search/10815/: Code_10815.cpp  Code_10815.h  숫자 카드.md
Code/c++/Backjun/TotalCode/1_Search/1920/: Code_1920.cpp
Code/c++/Backjun/TotalCode/1_Search/2805/: Code_2805.cpp  Code_2805.h
Code/c++/Backjun/TotalCode/2805/: Code_2805.cpp
Code/c++/Backjun/TotalCode/2_Sort/1026/: Code_1026.cpp
Code/c++/Backjun/TotalCode/2_Sort/1065/: Code_1065.cpp
Code/c++/Backjun/TotalCode/3047/: Code_3047.cpp  Code_3047.h
Code/c++/Backjun/TotalCode/SamsungSW/: SamsungSW.h
Code/c++/Backjun/TotalCode/SamsungSW/1_math/1934/: Code_1934.cpp  Code_1934.h
Code/c++/Backjun/TotalCode/SamsungSW/1_math/1978/: Code_1978.cpp  (+1 more)
Code/c++/Backjun/TotalCode/SamsungSW/GCD/: Code_gcd.cpp  Code_gcd.h
Code/c++/Backjun/TotalCode/SamsungSW/LCM/: Code_lcm.cpp  Code_lcm.h
Code/c++/Backjun/TotalCode/Test/: Test.cpp  Test.h
(+134 files in other folders)
