cmake_minimum_required(VERSION 3.14)
project(TotalCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(TotalCode main.cpp cmake-build-debug/ cmake-build-debug/ 1026/Code_1026.cpp 1026/Code_1026.h 10799/Code_10799.cpp 10799/Code_10799.h 10828/Code_10828.cpp 10828/Code_10828.h 1065/Code_1065.cpp 1065/Code_1065.h 1427/Code_1427.cpp 1427/Code_1427.h 3047/Code_3047.cpp 3047/Code_3047.h)